--- a/web/htdocs/themes/facelift/scss/_wato.scss
+++ b/web/htdocs/themes/facelift/scss/_wato.scss
@@ -167,6 +167,51 @@ div#service_container {
   }
 }
 
+div#datasources_container {
+  display: grid;
+  position: relative;
+  margin-bottom: $spacing;
+  padding: 12px 16px;
+  background-color: $headline-color;
+
+  div.datasources_state {
+    position: absolute;
+    width: 25px;
+    height: 100%;
+
+    span {
+      display: flex;
+      height: 100%;
+      border-radius: $border-radius-left;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        width: 14px;
+      }
+    }
+  }
+
+  div.datasources_output {
+    h2 {
+      margin: 0 25px 0px;
+    }
+
+    table {
+      margin: 5px 25px 0px;
+
+      td {
+        padding-right: 5px;
+        padding-bottom: 2px;
+
+        b {
+          margin: 0;
+        }
+      }
+    }
+  }
+}
+
 div#fixall_container {
   background-color: $headline-color;
   border-radius: 2px;
