Refactor hard coded font-weight styles
Change-Id: I820991b05a32ead2a41a8dfc6509db6564a1c1d8

--- a/web/htdocs/themes/facelift/scss/_cmk_figures.scss
+++ b/web/htdocs/themes/facelift/scss/_cmk_figures.scss
@@ -24,7 +24,7 @@ div.cmk_tab {
       position: relative;
       float: left;
       min-width: 10rem;
-      font-weight: bold;
+      font-weight: $font-weight-bold;
       line-height: 2rem;
       text-align: center;
       cursor: pointer;
