--- a/web/htdocs/themes/facelift/scss/_dashboard.scss
+++ b/web/htdocs/themes/facelift/scss/_dashboard.scss
@@ -63,7 +63,7 @@ div.dashlet {
     padding-left: 9px;
     margin: 0;
     overflow: hidden;
-    font-weight: 500;
+    font-weight: $font-weight-default;
     letter-spacing: 2px;
     color: $font-color;
     text-align: center;
