--- a/web/htdocs/themes/facelift/scss/_login.scss
+++ b/web/htdocs/themes/facelift/scss/_login.scss
@@ -260,7 +260,7 @@ body.login {
         left: 40px;
 
         b {
-          font-weight: normal;
+          font-weight: $font-weight-default;
         }
       }
 
