--- a/web/htdocs/themes/facelift/scss/_main.scss
+++ b/web/htdocs/themes/facelift/scss/_main.scss
@@ -316,7 +316,7 @@ img.treeangle {
 }
 
 b.treeangle.title {
-  font-weight: bold;
+  font-weight: $font-weight-bold;
   color: $font-color;
   cursor: pointer;
 }
@@ -513,7 +513,7 @@ table.dictionary {
 
   b.header {
     font-size: $font-size-small;
-    font-weight: normal;
+    font-weight: $font-weight-default;
   }
 
   td.dictright {
@@ -612,7 +612,7 @@ table.vs_date {
   th {
     padding: 0;
     font-size: $font-size-small;
-    font-weight: normal;
+    font-weight: $font-weight-default;
     text-align: center;
   }
 }
@@ -943,7 +943,7 @@ table.data.werks {
     }
 
     &.werklevel3 {
-      font-weight: bold;
+      font-weight: $font-weight-bold;
       background-color: $color-state-6-background;
     }
 
@@ -956,13 +956,13 @@ table.data.werks {
     }
 
     &.werkclasssecurity {
-      font-weight: bold;
+      font-weight: $font-weight-bold;
       color: $font-color-white;
       background-color: $color-state-2-background;
     }
 
     &.werkcompincomp_unack {
-      font-weight: bold;
+      font-weight: $font-weight-bold;
       background-color: $color-state-7-background;
     }
 
@@ -985,7 +985,7 @@ table.werks td a {
 td.nowiki {
   h3 {
     font-size: $font-size-large;
-    font-weight: bold;
+    font-weight: $font-weight-bold;
   }
 
   pre {
@@ -1005,7 +1005,7 @@ td.nowiki {
   div.filename {
     padding: 3px 8px;
     margin-bottom: -12px;
-    font-weight: bold;
+    font-weight: $font-weight-bold;
     color: $font-color-light-bg;
     background-color: $info;
   }
@@ -1188,7 +1188,7 @@ body.main.visible div.foldable .title {
 
 div.info {
   margin: 16px 0 8px;
-  font-weight: 500;
+  font-weight: $font-weight-default;
   letter-spacing: $letter-spacing-default;
   color: $font-color;
 }
