UI discovery: Inform about missing datasources
Change-Id: I9c0f4df6e3eec939989de3c563a72ef1574733f7

--- a/web/htdocs/themes/facelift/scss/_wato.scss
+++ b/web/htdocs/themes/facelift/scss/_wato.scss
@@ -197,6 +197,10 @@ div#datasources_container {
       margin: 0 25px 0px;
     }
 
+    &:first-child h2 {
+      margin: 0;
+    }
+
     table {
       margin: 5px 25px 0px;
 
