15487 FIX Fix indentation of tree of folders snapin
SUP-13984

Change-Id: I973fd2776aad5ecf17950799baa0d1a3a104c9d8

--- a/web/htdocs/themes/facelift/scss/_main.scss
+++ b/web/htdocs/themes/facelift/scss/_main.scss
@@ -386,8 +386,11 @@ ul.treeangle {
     display: block;
     padding-left: 20px;
     margin: 0;
-    margin-left: 16px;
     list-style: disc;
+
+    &:not(.single) {
+      margin-left: 16px;
+    }
   }
 }
 
