--- a/agents/wnx/install/Product.wxs
+++ b/agents/wnx/install/Product.wxs
@@ -8,7 +8,7 @@ just to signal that real build script was not called -->
 <?define ProductVersion = "2.0.0.0"?>
 <?endif ?>
 
-<?define CompanyName = "tribe29 GmbH"?>
+<?define CompanyName = "Checkmk GmbH"?>
 <?include version.wxi ?>
 <?define ProductId = "{C3BDE55B-4C42-48D0-8792-B1DE5174C202}"?>
 <?define ProductUpgradeCode = "83F434E9-EA96-4881-AA93-E21B27285C05"?>
