Show aggregated status in summary state title when available
Along the way: Fix displaying of "PENDING" state bullet.

Change-Id: I2c48c4a361a66d2c6f9ac6770a97e5e302376e08

--- a/web/htdocs/themes/facelift/scss/_status.scss
+++ b/web/htdocs/themes/facelift/scss/_status.scss
@@ -167,6 +167,11 @@ td.count.hstate2 {
 }
 
 /* PENDING / in DOWNTIME */
+.statebullet.statep {
+  color: $font-color-white !important;
+  background-color: $color-state-4-background !important;
+}
+
 .statep,
 .hstatep,
 .stated,
