Setup hosts: Add some new icons
... for "Remove TLS registration" and generally for searches in the dark
theme. Adjust unit test for dark theme images to check only for file
name stems, disregarding file extension.
CMK-13036

Change-Id: I16ea3bc78fecbb9c8af7c29c7b7ba6e63c63a6d8

--- a/web/htdocs/themes/facelift/scss/_pages.scss
+++ b/web/htdocs/themes/facelift/scss/_pages.scss
@@ -1090,9 +1090,14 @@ body.main .popup_menu {
 
   img {
     width: 12px;
-    height: auto;
+    height: 12px;
     margin-right: 3px;
     vertical-align: bottom;
+
+    &.emblem {
+      width: 10px;
+      height: 10px;
+    }
   }
 
   ul {
@@ -1126,6 +1131,10 @@ body.main .popup_menu {
   a:hover {
     text-decoration: underline;
     cursor: pointer;
+  }
+
+  span.emblem {
+    display: initial;
   }
 }
 
