--- a/web/htdocs/themes/facelift/scss/_sidebar.scss
+++ b/web/htdocs/themes/facelift/scss/_sidebar.scss
@@ -148,7 +148,7 @@ iframe#robotmk_error {
   img {
     width: 48px;
     height: auto;
-    padding: 0;
+    padding: 0 12px;
   }
 
   .min & img {
