--- a/web/htdocs/themes/facelift/scss/_login.scss
+++ b/web/htdocs/themes/facelift/scss/_login.scss
@@ -58,7 +58,7 @@ body.login {
 
       span.remaining_days {
         font-weight: $font-weight-bold;
-        color: $success-dimmed;
+        color: darken($new-success, 5%);
       }
 
       div.time_bar {
@@ -71,7 +71,7 @@ body.login {
           }
 
           &.remaining {
-            background-color: $success-dimmed;
+            background-color: darken($new-success, 5%);
           }
         }
       }
@@ -144,6 +144,7 @@ body.login {
     margin: 0;
     font-weight: $font-weight-bold;
     border: 1px solid $default-submit-button-border-color;
+    background-color: darken($new-success, 5%);
   }
 
   #_login:not(.hot),
