Rebranding: Remove most of the remaining "tribe29" references
References to *.lan.tribe29.com stay in place for now and will be
removed once the respective systems are migrated to checkmk.net

CMK-12940

Change-Id: Id2342eefaeb8bc6c39ccb75f122696b032deb246

--- a/agents/wnx/install/Product.wxs
+++ b/agents/wnx/install/Product.wxs
@@ -85,8 +85,8 @@ just to signal that real build script was not called -->
     this code is disabled, because bakery/msi-update is not able to upgrade versions correctly 
     -->
         <MajorUpgrade AllowDowngrades="yes" />
-        <Icon Id="tribe29.ico" SourceFile="tribe29.ico" />
-        <Property Id="ARPPRODUCTICON" Value="tribe29.ico" />
+        <Icon Id="checkmk.ico" SourceFile="checkmk.ico" />
+        <Property Id="ARPPRODUCTICON" Value="checkmk.ico" />
         <Property Id="INSTALLEDSERVICEDESCRIPTION">
             <RegistrySearch Id="InstalledServiceDescription"
                             Root="HKLM"
