Sidebar checkmk icon: Fix size
Change-Id: I8fee76527477aca0e13fb392275c64b761c60ad0

--- a/web/htdocs/themes/facelift/scss/_sidebar.scss
+++ b/web/htdocs/themes/facelift/scss/_sidebar.scss
@@ -148,11 +148,12 @@ iframe#robotmk_error {
   img {
     width: 48px;
     height: auto;
-    padding: 0 12px;
+    padding: 0;
   }
 
   .min & img {
     width: 45px;
+    padding: 0 12px;
 
     &.custom {
       width: 35px;
