Align nagvis snapin icons with text
CMK-13215

Change-Id: I76c65d3e390fe87efa6518dfbb59de4f38b3961e

--- a/web/htdocs/themes/facelift/scss/_snapins.scss
+++ b/web/htdocs/themes/facelift/scss/_snapins.scss
@@ -58,6 +58,10 @@ table.hostmatrix {
     width: 50%;
     padding: 0;
 
+    div.statebullet {
+      margin-bottom: 2px;
+    }
+
     a.link {
       padding: 2px 2px 2px $spacing-half;
     }
