--- a/web/htdocs/themes/facelift/scss/_pages.scss
+++ b/web/htdocs/themes/facelift/scss/_pages.scss
@@ -637,6 +637,13 @@ span.select2 .select2-selection {
   }
 }
 
+.select2-container--default.select2-container--disabled .select2-selection--single {
+  background-color: transparent;
+  .select2-selection__arrow {
+    display: none;
+  }
+}
+
 input[type="text"],
 textarea {
   position: relative;
