--- a/web/htdocs/themes/facelift/scss/_status.scss
+++ b/web/htdocs/themes/facelift/scss/_status.scss
@@ -106,6 +106,7 @@ div.stated {
 /* WARN */
 .bibox_box.state1,
 span.content.state1,
+label.state1,
 b.state1,
 td.count.state1,
 td.number.state1,
@@ -126,6 +127,7 @@ td.fillbackground.state1,
 /* CRIT/DOWN */
 .bibox_box.state2,
 span.content.state2,
+label.state2,
 b.state2,
 td.count.state2,
 td.number.state2,
@@ -148,6 +150,7 @@ td.count.hstate1 {
 /* UNKNOWN / UNREACH */
 .bibox_box.state3,
 span.content.state3,
+label.state3,
 b.state3,
 td.count.state3,
 td.number.state3,
