--- a/web/htdocs/themes/facelift/scss/_login.scss
+++ b/web/htdocs/themes/facelift/scss/_login.scss
@@ -56,7 +56,7 @@ body.login {
       background-color: $bg-color;
       border-radius: $theme-border-radius;
 
-      span.remaining_days {
+      span.remaining_time {
         font-weight: $font-weight-bold;
         color: darken($new-success, 5%);
       }
@@ -79,7 +79,7 @@ body.login {
       &.warning {
         color: $font-color;
 
-        span.remaining_days {
+        span.remaining_time {
           color: $trial-expiration-warn-color;
         }
 
