fix branding in Windows agent: change product name
Change-Id: Ib94778ae5f9c886adb731399adffe4b3c706d564

--- a/agents/wnx/install/Product.wxs
+++ b/agents/wnx/install/Product.wxs
@@ -106,7 +106,7 @@ just to signal that real build script was not called -->
         </Upgrade>
 
 
-        <Feature Id="ProductFeature" Title="Check MK Agent" Level="1">
+        <Feature Id="ProductFeature" Title="Checkmk Agent" Level="1">
             <ComponentGroupRef Id="ProductComponents" />
         </Feature>
         <Feature Id="plugins" Title="Plugins Folder" Level="1">
