15926 FIX Fix background color of pending state
SUP-14554

Change-Id: Ie82d6aacc6eb2df4337d12ccf175ad5507cb19e1

--- a/web/htdocs/themes/facelift/scss/_status.scss
+++ b/web/htdocs/themes/facelift/scss/_status.scss
@@ -170,11 +170,13 @@ td.count.hstate2 {
 }
 
 /* PENDING / in DOWNTIME */
+span.content.state-1,
 .statebullet.statep {
   color: $font-color-white !important;
   background-color: $color-state-4-background !important;
 }
 
+.state-1,
 .statep,
 .hstatep,
 .stated,
