Add hover border to mega menu entries
... that perform an action. i.e. the buttons for the saas admin panel
and the sidebar fold

Change-Id: I9b318393e74ed2d8403c75db8c3df959e0331842

--- a/web/htdocs/themes/facelift/scss/_sidebar.scss
+++ b/web/htdocs/themes/facelift/scss/_sidebar.scss
@@ -173,11 +173,16 @@ body.main .popup_menu #side_header > span {
 
 #side_fold,
 #saas {
-  margin: $spacing 0;
+  padding: $spacing 4px $spacing 0;
   font-size: $font-size-small;
   color: $font-color;
   text-align: center;
   cursor: pointer;
+  border-left: 4px solid $navigation-bg-color;
+
+  &:hover {
+    border-left-color: $success;
+  }
 
   img {
     margin-bottom: 8px;
