15984 Introduce Saas edition werks
We can write saas edition werks now

Change-Id: I06ca61b1fbd78e70181cb23bb9a0df5635060da6

--- a/cmk/utils/werks/announce/templates/announce.md.jinja2
+++ b/cmk/utils/werks/announce/templates/announce.md.jinja2
@@ -33,6 +33,10 @@ This {{release_type}} release ships with {{werks.cre.len}} changes affecting all
 {{ changes(werks.cce.werks) }}
 
 
+## Changes in the Checkmk Saas Edition:
+{{ changes(werks.cse.werks) }}
+
+
 ## Changes in the Checkmk Managed Services Edition:
 {{ changes(werks.cme.werks) }}
 
