--- a/cmk/utils/werks/announce/templates/announce.txt.jinja2
+++ b/cmk/utils/werks/announce/templates/announce.txt.jinja2
@@ -35,6 +35,10 @@ Changes in the Checkmk Cloud Edition:
 {{ changes(werks.cce.werks) }}
 
 
+Changes in the Checkmk Saas Edition:
+{{ changes(werks.cse.werks) }}
+
+
 Changes in the Checkmk Managed Services Edition:
 {{ changes(werks.cme.werks) }}
 
