--- a/packages/cmk-frontend/src/themes/facelift/scss/_main.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_main.scss
@@ -219,23 +219,29 @@ input.button.hot,
     background-color: $success;
     border-color: $success;
   }
-
-  &[data-loading='true'] {
-    animation: cmk-pulse-load 1.5s ease-in-out infinite;
-    cursor: wait;
-    border-color: transparent;
-  }
 }
 
-@keyframes cmk-pulse-load {
+.shimmer-input-button {
+  position: relative;
+  animation: cmk-shimmer-load 3s infinite;
+
+  // Create a gradient overlay on top of the existing background since our buttons are input elements for which ::after
+  // does not work
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.5) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  background-size: 200% 100%;
+}
+
+@keyframes cmk-shimmer-load {
   0% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.6;
+    background-position: 200% 0;
   }
   100% {
-    opacity: 1;
+    background-position: -200% 0;
   }
 }
 
