feat(vue) add custom-snapin icon to simpleIcon
Change-Id: Ie9db584eea0e551914e5d1d0a42a07edc98fc377

--- a/packages/cmk-frontend-vue/src/assets/variables.css
+++ b/packages/cmk-frontend-vue/src/assets/variables.css
@@ -107,6 +107,7 @@
   --icon-check-parameters: url('~cmk-frontend/themes/facelift/images/icon_check_parameters.svg');
   --icon-sites: url('~cmk-frontend/themes/facelift/images/icon_sites.svg');
   --icon-folder: url('~cmk-frontend/themes/facelift/images/icon_folder.svg');
+  --icon-custom-snapin: url('~cmk-frontend/themes/facelift/images/icon_custom_snapin.svg');
   --icon-networking: url('~cmk-frontend/themes/facelift/images/icon_networking.svg');
   --icon-aws-logo: url('~cmk-frontend/themes/facelift/images/icon_aws_logo.svg');
   --icon-azure-vms: url('~cmk-frontend/themes/facelift/images/icon_azure_vms.svg');
