18861 FIX HTML email: Display actual event date in "Event overview"
SUP-25758

Change-Id: I5dbe23ae5abdbc5dbc6ddfc659e63a48fc06ab61

--- a/notifications/templates/mail/event_overview.html
+++ b/notifications/templates/mail/event_overview.html
@@ -39,7 +39,13 @@
         <td style="padding: 5px 0;
                    margin: 0;
                    line-height: 1.4;
-                   mso-line-height-rule: exactly">{{ data.SHORTDATETIME }}</td>
+                   mso-line-height-rule: exactly">
+            {% if service_notification %}
+               {{ data.LASTSERVICESTATECHANGE | timestamp() if data.get('LASTSERVICESTATECHANGE') else 'N/A'}}
+            {% else %}
+               {{ data.LASTHOSTSTATECHANGE | timestamp() if data.get('LASTHOSTSTATECHANGE') else 'N/A'}}
+            {% endif %}
+        </td>
     </tr>
     <tr>
         <td width="100"
