feat(relay config): Add relay overview button
Add button to go to the relay overview page from the last step in the
relay creation wizard.

CMK-26875

Change-Id: I058b10175f8cfb698cc7b3b681a9ca41be30357c

--- a/packages/cmk-frontend-vue/src/assets/variables.css
+++ b/packages/cmk-frontend-vue/src/assets/variables.css
@@ -125,6 +125,7 @@
   --icon-new: url('~cmk-frontend/themes/facelift/images/icon_new.svg');
   --icon-copied: url('~cmk-frontend/themes/facelift/images/icon_copied.svg');
   --icon-global-settings: url('~cmk-frontend/themes/facelift/images/icon_global_settings.svg');
+  --icon-relay-menu: url('~cmk-frontend/themes/facelift/images/icon_relay_menu.svg');
   --icon-topic-administration: url('~cmk-frontend/themes/facelift/images/icon_topic_administration.png');
   --icon-topic-agents: url('~cmk-frontend/themes/facelift/images/icon_topic_agents.png');
   --icon-topic-analyze: url('~cmk-frontend/themes/facelift/images/icon_topic_analyze.png');
