dashboard-wip: ajax calls for user messages
implement the ajax calls for both data collection and message actions
in the user messages widget

CMK-26327

Change-Id: I314e1f071efbd3efcb69c32d5c3d8de3cf01b1f3

--- a/packages/cmk-frontend-vue/src/assets/variables.css
+++ b/packages/cmk-frontend-vue/src/assets/variables.css
@@ -184,6 +184,7 @@
   --icon-widget-edit: url('~cmk-frontend/themes/facelift/images/icon_widget_edit.svg');
   --icon-widget-clone: url('~cmk-frontend/themes/facelift/images/icon_widget_clone.svg');
   --icon-widget-delete: url('~cmk-frontend/themes/facelift/images/icon_widget_delete.svg');
+  --icon-werk-ack: url('~cmk-frontend/themes/facelift/images/icon_werk_ack.png');
 }
 
 @layer theme {
