--- a/web/htdocs/themes/facelift/scss/_sidebar.scss
+++ b/web/htdocs/themes/facelift/scss/_sidebar.scss
@@ -15,6 +15,7 @@
 '-------------------------------------------------------------------------*/
 
 body.side {
+  position: fixed;
   width: 100vw;
   height: 100vh;
   padding: 0;
